@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: debug.c,v 1.30 2008/04/21 14:33:40 bzfpfets Exp $"
+#pragma ident "@(#) $Id: debug.c,v 1.31 2008/08/29 20:20:35 bzfheinz Exp $"
 
 /**@file   debug.c
  * @brief  methods for debugging
@@ -38,7 +38,6 @@
 #include "scip/scip.h"
 #include "scip/debug.h"
 #include "scip/struct_scip.h"
-
 
 #ifdef SCIP_DEBUG_SOLUTION
 
@@ -766,6 +765,93 @@ extern void SCIPdummyDebugMethodForSun(void);
 void SCIPdummyDebugMethodForSun(void)
 {
       return;
+}
+
+#endif
+
+
+/* 
+ * debug method for LP interface, to check if the LP interface works correct 
+ */
+#ifdef SCIP_DEBUG_LP_INTERFACE
+
+/* check whether coef is the r-th row of the inverse basis matrix B^-1; this is
+ * the case if (coef * B) is the r-th unit vector */
+SCIP_RETCODE SCIPdebugCheckBInvRow(
+   SCIP*                 scip,               /**< SCIP data structure */
+   int                   r,                  /**< row number */
+   SCIP_Real*            coef                /**< r-th row of the inverse basis matrix */
+   )
+{
+   SCIP_Real vecval;
+   SCIP_Real matrixval;
+   int* basisind;
+   int nrows;
+   int idx;
+   int i;
+   int k;
+
+   nrows = SCIPgetNLPRows(scip);
+
+   /* get basic indices for the basic matrix B */
+   SCIP_CALL( SCIPallocBufferArray(scip, &basisind, nrows) );
+   SCIP_CALL( SCIPgetLPBasisInd(scip, basisind) );
+   
+   
+   /* loop over the columns of B */
+   for( k = 0; k < nrows; ++k )
+   {
+      vecval = 0.0;
+      
+      /* indices of basic columns and rows: 
+       * - index i >= 0 corresponds to column i, 
+       * - index i < 0 to row -i-1 
+       */
+      idx = basisind[k];
+      
+      /* check if we have a slack variable; this is the case if idx < 0 */
+      if( idx >= 0 )
+      {
+         /* loop over the rows to compute the corresponding value in the unit vector */
+         for( i = 0; i < nrows; ++i )
+         {
+            SCIP_CALL( SCIPlpiGetCoef(scip->lp->lpi, i, idx, &matrixval) );
+            vecval += coef[i] * matrixval;
+         }
+      }
+      else 
+      {
+         assert( idx < 0 );
+         
+         /* retransform idx 
+          * - index i >= 0 corresponds to column i, 
+          * - index i < 0 to row -i-1 
+          */
+         idx = -idx - 1;
+         assert( idx >= 0 && idx < nrows );
+         
+         /* since idx < 0 we are in the case of a slack variable, i.e., the corresponding column 
+            is the idx-unit vector; note that some LP solver return a -idx-unit vector */
+         //               vecval = REALABS(coef[idx]);
+         vecval = coef[idx];
+      }
+      
+      /* check if vecval fits to the r-th unit vector */
+      if( k == r && !SCIPisFeasEQ(scip, vecval, 1.0) )
+      {
+         /* we expected a 1.0 and found something different */
+         SCIPwarningMessage("checked SCIPgetLPBInvRow() found value <%g> expected 1.0\n", vecval);
+      }
+      else if( k != r && !SCIPisFeasZero(scip, vecval) )
+      {
+         /* we expected a 0.0 and found something different */
+         SCIPwarningMessage("checked SCIPgetLPBInvRow() found value <%g> expected 0.0\n", vecval);
+      }
+   }
+   
+   SCIPfreeBufferArray(scip, &basisind);
+   
+   return SCIP_OKAY;
 }
 
 #endif
